<resources>
    <string name="app_name">NameApp</string>
    <string name="visNavn">Vis Navn</string>
    <string name="visBilder">Vis Bilder</string>
    <string name="learning">Læringsmodus</string>
    <string name="correctGuess">Bra jobbet, scoren er: </string>
    <string name="showScore">Score: </string>
    <string name="students">students</string>
    <string name="wrongGuess">Du gjettet feil. Riktig svar: </string>
    <string name="guess">Gjett!</string>
    <string name="editTextName">Navn</string>
    <string name="legg_til">Legg til student</string>
    <string name="avbryt">Avbryt</string>
    <string name="PersonRegister">PersonRegister</string>
    <string name="missingImage">Mangler bilde</string>
    <string name="missingName">Mangler navn</string>
    <string name="missingNameAndImage">Mangler bilde og navn</string>
    <string name="isAdded">er lagt til!</string>
</resources>
