<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="hvl.nameapp.AddNewStudent">

    <ImageView
        android:id="@+id/student_image"
        android:layout_width="250dp"
        android:layout_height="250dp" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="288dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:hint="@string/editTextName"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/legg_til" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/avbryt" />

    </LinearLayout>


</LinearLayout>
